--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(43, 56, 50) ;
-    color: white;
+    background-color: white ;
+    color: black;
 }
 
 footer {
@@ -14,5 +14,5 @@ footer {
 }
 
 .div-top {
-    margin-top: 56px;
+    margin-top: 100px;
 }
