--- a/app/templates/public/layout.html
+++ b/app/templates/public/layout.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html lang="pt-br">
     <head>
-        {% block head %}
+        
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,7 +9,7 @@
         <link rel="icon" href="{{ url_for('static',filename='img/favicon/favicon.png')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
         <title>TI - Unimed</title>
-        {% endblock %}
+        {% block head %}{% endblock %}
     </head>
     <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
@@ -23,10 +23,10 @@
                         <a class="nav-link" href="index">RockeTI <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ips">Ip's</a>
+                        <a class="nav-link" href="documents">Documentos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="documents">Documentos</a>
+                        <a class="nav-link" href="ips">Consultar Ip</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="agenda">Agenda Telefônica</a>
