--- a/app/templates/public/templates/ips.html
+++ b/app/templates/public/templates/ips.html
@@ -1,9 +1,15 @@
 {% extends "public/layout.html" %}
 
+{% block head %}
+
+<link rel="stylesheet" href="{{url_for('static',filename='css/dataTable.css')}}">
+
+{% endblock %}
+
 {% block body %}
 
 <div class="div-top">
-    <div class="container">
+    <!-- <div class="container" style="width: 500px">
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -21,6 +27,130 @@
           <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
     </div>
+</div> -->
+
+<div class="container">
+        <table id="ipTable" class="table" style="width:70%" style="background-color: rgb(26, 20, 80);">
+        <thead>
+            <tr>
+                <th>Hostname</th>
+                <th>Modelo</th>
+                <th>Local</th>
+                <th>Setor</th>
+                <th>Tombamento</th>
+                <th>Ip</th>
+                <th>Ramal</th>
+                <th>Editar</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>WSHGMI1234</td>
+                <td>Notebook Dell i3</td>
+                <td>HGMI</td>
+                <td>2º Andar</td>
+                <td>1234</td>
+                <td>172.31.29.64</td>
+                <td>3589</td>
+                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+            </tr>
+            <tr>
+                <td>WSHUR158963</td>
+                <td>CPU i3</td>
+                <td>HUR1</td>
+                <td>3º Andar</td>
+                <td>58963</td>
+                <td>192.168.36.98</td>
+                <td>2281</td>
+                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+            </tr>
+            <tr>
+                <td>WHSHUR15696</td>
+                <td>CPU i5</td>
+                <td>HUR1</td>
+                <td>6º Andar</td>
+                <td>5696</td>
+                <td>192.168.36.71</td>
+                <td>2154</td>
+                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+            </tr>
+            <tr>
+                <td>WHSHUR15214</td>
+                <td>CPU i5</td>
+                <td>HGMI</td>
+                <td>6º Andar</td>
+                <td>5214</td>
+                <td>192.168.14.55</td>
+                <td>2154</td>
+                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+            </tr>
+            <tr>
+                <td>WHSHUR13166</td>
+                <td>CPU i3</td>
+                <td>CADM</td>
+                <td>6º Andar</td>
+                <td>3166</td>
+                <td>192.168.20.45</td>
+                <td>2154</td>
+                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+            </tr>
+            <tr>
+                <td>WHSHUR14088</td>
+                <td>Notebook Dell i7</td>
+                <td>HUR3</td>
+                <td>5º Andar</td>
+                <td>4088</td>
+                <td>172.31.11.22</td>
+                <td>5893</td>
+                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+            </tr>
+            <tr>
+                <td>WHSHUR15518</td>
+                <td>Notebook Dell i3</td>
+                <td>HUR1</td>
+                <td>5º Andar</td>
+                <td>5518</td>
+                <td>172.31.16.25</td>
+                <td>4011</td>
+                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+            </tr>
+        </table>
 </div>
+
+{% block scripts %}
+
+<script src="{{url_for('static',filename='js/jquery-datatable.js')}}" charset="utf-8"></script>
+
+<script>
+  $(document).ready(function() {
+    $('#ipTable').DataTable({
+                            "language" : {
+                                            "sProcessing":   "A processar...",
+                                            "sLengthMenu":   "Mostrar _MENU_ registos",
+                                            "sZeroRecords":  "Não foram encontrados resultados",
+                                            "sInfo":         "Resultado(s) _START_ a _END_ de um total de _TOTAL_.",
+                                            "sInfoEmpty":    "Mostrando de 0 até 0 de 0 registos",
+                                            "sInfoFiltered": "(filtrado de _MAX_ registos no total)",
+                                            "sInfoPostFix":  "",
+                                            "sSearch":       "Procurar:",
+                                            "sUrl":          "",
+                                            "oPaginate": {
+                                                "sFirst":    "Primeiro",
+                                                "sPrevious": "Anterior",
+                                                "sNext":     "Seguinte",
+                                                "sLast":     "Último"
+                                            }
+                                        },
+                                responsive: true,
+                            // Retirada da visualização da quantidade dos itens por página.
+                            "bLengthChange": false,
+                            // Define o tamanho de registros a serem filtrados, o primeiro é o default.
+                            "lengthMenu": [5, 10, 25, 50, 75, 100 ]
+                        });
+                    });
+</script>
+
+{% endblock %}
+
 
 {% endblock %}
