--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -16,7 +16,8 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: white;
-  color: white;
+  color: green;
+  font-family: fantasy;
 }
 
 .form-signin {
@@ -25,26 +26,22 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .checkbox {
-  font-weight: 400;
-}
 .form-signin .form-control {
   position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 10px;
+  box-sizing:content-box;
+  height: 10px;
+  width: auto;
+  padding: 15px;
   font-size: 16px;
 }
 .form-signin .form-control:focus {
   z-index: 2;
 }
 .form-signin input[type="text"] {
-  margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
@@ -52,15 +49,21 @@ body {
 .circle {
   background-color: rgb(37, 9, 114);
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 130px;
+  height: 130px;
   overflow: hidden;
   position: relative;
-  margin-left: 24%;
+  margin-left: 28%;
+  margin-top: 5%
 }
 
 .circle img {
-  position: center;
+  position:relative;
   bottom: 0;
   width: 100%;
+}
+
+#btn-login {
+    width: 180px;
+    margin-left: 9%
 }
