--- a/app/templates/public/layout.html
+++ b/app/templates/public/layout.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html lang="pt-br">
     <head>
-        
+
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
     </head>
     <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
-            <img src="{{ url_for('static',filename='img/rocket.png')}}" alt="">
+            <img src="{{ url_for('static',filename='img/rocket.png')}}" alt="foguete">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
