--- a/app/templates/public/templates/index.html
+++ b/app/templates/public/templates/index.html
@@ -6,7 +6,7 @@
 {% block body %}
     <div class="div-top">
         <div class="jumbotron">
-            <h1 class="display-4">Bem vido a plataforma da <span style="color: green;" >RockeTI!</span></h1>
+            <h1 class="display-4">Bem vindo a plataforma da <span style="color: green;" >RockeTI!</span></h1>
             <p class="lead">Aqui você terá alguns recursos para agilizar o seu atendimento, use e abuse ;) </p>
             <hr class="my-4">
             <p>Caso tenha alguma sugestão, por favor, entre em contato...</p>
@@ -17,4 +17,3 @@
     {% block scripts %}
     {% endblock %}
 {% endblock %}
-    
