--- a/app/templates/public/templates/login.html
+++ b/app/templates/public/templates/login.html
@@ -18,20 +18,20 @@
           </div>
           <br>
           <h1 class="h3 mb-3 font-weight-normal">RockeTI</h1>
-          <form class="form-signin">
+          <form class="form-signin" method="post">
             <div class="form-group input-group">
                 <div class="input-group-prepend">
 		            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
 		        </div>
-                <input type="text" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
+                <input type="text" id="inputLogin" name="login" class="form-control" placeholder="Login" required autofocus>
             </div>
             <div class="form-group input-group">
                 <div class="input-group-prepend">
 		            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
 		        </div>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
             </div>
-            <button id="btn-login" class="btn btn-lg btn-success btn-block" type="submit">Entrar</button>
+            <input type="submit" class="btn btn-lg btn-success btn-block" value="Entrar" >
           </form>
       </div>
     {{ bootstrap.load_js() }}
