--- a/app/templates/admin/templates/register.html
+++ b/app/templates/admin/templates/register.html
@@ -2,6 +2,11 @@
 
 
 
+{% block head %}
+
+<link rel="stylesheet" href="{{url_for('static',filename='css/dataTable.css')}}">
+
+{% endblock %}
 
 {% block content %}
     <h1 class="h2">Usuários</h1>
@@ -10,43 +15,131 @@
 
 {% block body %}
 
-    <div class="card" style="width: 300px; heidth:300px; align-content: center">
+    <div class="container"
+    <div class="col-md-8 order-md-1">
         <form action="" method="post" >
-            Nome: <input id="nome" name="first_name" type="text">
-            Sobrenome: <input type="text" name="last_name" >
-            Email: <input type="email" name="email">
-            <br>
-            Login: <input type="text" name="login">
-            Password: <input type="password" name="password">
-            <input type="submit" value="Cadastrar" >
+          <h4 class="mb-3">Cadastrar</h4>
+          <form class="needs-validation" novalidate>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="firstName">First name</label>
+                <input type="text" class="form-control" id="firstName" name="first_name" placeholder="Nome" value="" required>
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <label for="lastName">Last name</label>
+                <input type="text" class="form-control" id="lastName" name="last_name" placeholder="Sobrenome" value="" required>
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="username">Login</label>
+              <div class="input-group">
+                <input type="text" class="form-control" id="username" name="login" placeholder="Login" required>
+                <div class="invalid-feedback" style="width: 100%;">
+                  Your username is required.
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" id="address" name="password" placeholder="Senha" required>
+              <div class="invalid-feedback">
+                Please enter your shipping address.
+              </div>
+            </div>
+            <input type="submit" class="btn btn-lg btn-success btn-block" value="Registrar" >
         </form>
     </div>
+    <hr>
+    <div class="container" style="align:center">
+        <h4 class="mb-3">Consultar</h4>
+            <table id="userTable" class="table" style="width:70%" style="background-color: rgb(26, 20, 80);">
+            <thead>
+                <tr>
+                    <th>Hostname</th>
+                    <th>Modelo</th>
+                    <th>Local</th>
+                    <th>Setor</th>
+                    <th>Tombamento</th>
+                    <th>Ip</th>
+                    <th>Ramal</th>
+                    <th>Editar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>WSHGMI1234</td>
+                    <td>Notebook Dell i3</td>
+                    <td>HGMI</td>
+                    <td>2º Andar</td>
+                    <td>1234</td>
+                    <td>172.31.29.64</td>
+                    <td>3589</td>
+                    <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+                </tr>
+                <tr>
+                    <td>WHSHUR15518</td>
+                    <td>Notebook Dell i3</td>
+                    <td>HUR1</td>
+                    <td>5º Andar</td>
+                    <td>5518</td>
+                    <td>172.31.16.25</td>
+                    <td>4011</td>
+                    <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+                </tr>
+            </table>
+    </div>
+
 
 {% endblock %}
 
 
-<!--
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {{ bootstrap.load_css() }}
-    <title>Document</title>
-</head>
-<body>
-    <div class="card" style="width: 300px; heidth:300px; align-content: center">
-        <form action="" method="post" >
-            Nome: <input id="nome" name="first_name" type="text">
-            Sobrenome: <input type="text" name="last_name" >
-            Email: <input type="email" name="email">
-            <br>
-            Login: <input type="text" name="login">
-            Password: <input type="password" name="password">
-            <input type="submit" value="Cadastrar" >
-        </form>
-    </div>
-    {{ bootstrap.load_js() }}
-</body>
-</html> -->
+{% block scripts %}
+
+<script src="{{url_for('static',filename='js/jquery-datatable.js')}}" charset="utf-8"></script>
+
+<script>
+  $(document).ready(function() {
+    $('#userTable').DataTable({
+                            "language" : {
+                                            "sProcessing":   "A processar...",
+                                            "sLengthMenu":   "Mostrar _MENU_ registos",
+                                            "sZeroRecords":  "Não foram encontrados resultados",
+                                            "sInfo":         "Resultado(s) _START_ a _END_ de um total de _TOTAL_.",
+                                            "sInfoEmpty":    "Mostrando de 0 até 0 de 0 registos",
+                                            "sInfoFiltered": "(filtrado de _MAX_ registos no total)",
+                                            "sInfoPostFix":  "",
+                                            "sSearch":       "Procurar:",
+                                            "sUrl":          "",
+                                            "oPaginate": {
+                                                "sFirst":    "Primeiro",
+                                                "sPrevious": "Anterior",
+                                                "sNext":     "Seguinte",
+                                                "sLast":     "Último"
+                                            }
+                                        },
+                                responsive: true,
+                            // Retirada da visualização da quantidade dos itens por página.
+                            "bLengthChange": false,
+                            // Define o tamanho de registros a serem filtrados, o primeiro é o default.
+                            "lengthMenu": [5, 10, 25, 50, 75, 100 ]
+                        });
+                    });
+</script>
+
+{% endblock %}
