--- a/app/templates/public/templates/index.html
+++ b/app/templates/public/templates/index.html
@@ -1,7 +1,5 @@
+{% if current_user.is_authenticated %}
 {% extends "public/layout.html" %}
-{% from 'bootstrap/form.html' import render_form %}
-
-<!-- env\Lib\site-packages\flask_bootstrap\templates\bootstrap -->
 
 {% block body %}
     <div class="div-top">
@@ -14,6 +12,16 @@
           </div>
     </div>
     <script src="{{url_for('static',filename='js/app.js')}}" charset="utf-8"></script>
-    {% block scripts %}
-    {% endblock %}
+    {% block scripts %}{% endblock %}
 {% endblock %}
+
+{% else %}
+<div class="div-top">
+    <div class="jumbotron">
+        <h1 class="display-4">Você precisa se autenticar primeiro...</h1>
+        <hr class="my-4">
+        <a class="btn btn-primary btn-lg" href="{{url_for('login')}}" role="button">Conectar</a>
+      </div>
+</div>
+
+{% endif %}
