--- a/templates/admin/templates/dashboard.html
+++ b/templates/admin/templates/dashboard.html
@@ -20,8 +20,8 @@
         <thead>
             <tr>
                 <th>#</th>
-                <th>Header</th>
-                <th>Header</th>
+                <th>Segunda</th>
+                <th>TEREEEERERECA</th>
                 <th>Header</th>
                 <th>Header</th>
             </tr>
