--- a/templates/public/templates/ips.html
+++ b/templates/public/templates/ips.html
@@ -9,28 +9,8 @@
 {% block body %}
 
 <div class="div-top">
-    <!-- <div class="container" style="width: 500px">
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-          </div>
-          <button type="submit" class="btn btn-secondary">Submit</button>
-        </form>
-    </div>
-</div> -->
-
 <div class="container">
-        <table id="ipTable" class="table" style="width:70%" style="background-color: rgb(26, 20, 80);">
+    <table id=ipTable" class="table" style="width:70%" style="background-color: rgb(26, 20, 80);">
         <thead>
             <tr>
                 <th>Hostname</th>
@@ -52,56 +32,6 @@
                 <td>1234</td>
                 <td>172.31.29.64</td>
                 <td>3589</td>
-                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
-            </tr>
-            <tr>
-                <td>WSHUR158963</td>
-                <td>CPU i3</td>
-                <td>HUR1</td>
-                <td>3º Andar</td>
-                <td>58963</td>
-                <td>192.168.36.98</td>
-                <td>2281</td>
-                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
-            </tr>
-            <tr>
-                <td>WHSHUR15696</td>
-                <td>CPU i5</td>
-                <td>HUR1</td>
-                <td>6º Andar</td>
-                <td>5696</td>
-                <td>192.168.36.71</td>
-                <td>2154</td>
-                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
-            </tr>
-            <tr>
-                <td>WHSHUR15214</td>
-                <td>CPU i5</td>
-                <td>HGMI</td>
-                <td>6º Andar</td>
-                <td>5214</td>
-                <td>192.168.14.55</td>
-                <td>2154</td>
-                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
-            </tr>
-            <tr>
-                <td>WHSHUR13166</td>
-                <td>CPU i3</td>
-                <td>CADM</td>
-                <td>6º Andar</td>
-                <td>3166</td>
-                <td>192.168.20.45</td>
-                <td>2154</td>
-                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
-            </tr>
-            <tr>
-                <td>WHSHUR14088</td>
-                <td>Notebook Dell i7</td>
-                <td>HUR3</td>
-                <td>5º Andar</td>
-                <td>4088</td>
-                <td>172.31.11.22</td>
-                <td>5893</td>
                 <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
             </tr>
             <tr>
