change btn color test

--- a/templates/public/templates/ips.html
+++ b/templates/public/templates/ips.html
@@ -32,7 +32,7 @@
                 <td>1234</td>
                 <td>172.31.29.64</td>
                 <td>3589</td>
-                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
+                <td><button class="btn btn-lg btn-warning btn-block" type="submit">Editar</button></td>
             </tr>
             <tr>
                 <td>WHSHUR15518</td>
