reworking to make this project run good

--- a/app/templates/admin/templates/dashboard.html
+++ b/app/templates/admin/templates/dashboard.html
@@ -6,11 +6,12 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="h2">Dashboard</h1>
+<h1 style="color: rgba(105, 103, 103, 0.993) ">Dashboard</h1>
 {% endblock %}
 
 
 {% block body %}
+
 
 <img style="max-width: 500px" src="{{ url_for('static',filename='img/flask-img.png') }}" alt="flask">
 
@@ -42,5 +43,15 @@
 </div>
 </div>
 
+
+{% endblock %}
+
+{% block scripts %}
+
+<script>
+
+
+
+</script>
 
 {% endblock %}
