--- a/app/templates/admin/templates/errorRegister.html
+++ b/app/templates/admin/templates/errorRegister.html
@@ -8,7 +8,7 @@
 {% block body %}
 
     <div class="jumbotron">
-  <h1 class="display-4">Error!</h1>
+  <h1 class="display-4">Erro!</h1>
   <p class="lead">Desculpe, mas já existe um usuário cadastrado com esse <strong>login</strong> ou <strong>email</strong>.</p>
   <hr class="my-4">
   <p class="lead">
