--- a/app/templates/public/templates/documents.html
+++ b/app/templates/public/templates/documents.html
@@ -5,8 +5,88 @@
 
 <div class="div-top">
     <div class="container">
-        <h1>Lista de Documents</h1>
+        <h1>Modelos de Documentos</h1>
+        <a href="{{url_for('doc_pdf')}}" target="_blank" rel="noopener noreferrer"></a>
+    </div>
+<div class="container">
+  <div class="card-deck mb-3 text-center">
+    <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Modelo de Ata de Treinamento</h4>
+        </div>
+        <div class="card-body">
+          <img id="pdf" src="{{url_for('static',filename='img/pdf.png')}}" alt="pdf">
+          <hr>
+          <span> 
+            <a class="btn btn-success btn-lg btn-block" href="{{url_for('doc_pdf')}}" role="button" target="_blank">Visualizar</a>
+          </span>
+        </div>
+      </div>
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Modelo de Ata de Treinamento</h4>
+        </div>
+        <div class="card-body">
+          <img id="pdf" src="{{url_for('static',filename='img/pdf.png')}}" alt="pdf">
+          <hr>
+          <span> 
+            <a class="btn btn-success btn-lg btn-block" href="{{url_for('doc_pdf')}}" role="button" target="_blank">Visualizar</a>
+          </span>
+        </div>
+      </div>
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Modelo de Ata de Treinamento</h4>
+        </div>
+        <div class="card-body">
+          <img id="pdf" src="{{url_for('static',filename='img/pdf.png')}}" alt="pdf">
+          <hr>
+          <span> 
+            <a class="btn btn-success btn-lg btn-block" href="{{url_for('doc_pdf')}}" role="button" target="_blank">Visualizar</a>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="card-deck mb-3 text-center">
+      <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Modelo de Ata de Treinamento</h4>
+          </div>
+          <div class="card-body">
+            <img id="pdf" src="{{url_for('static',filename='img/pdf.png')}}" alt="pdf">
+            <hr>
+            <span> 
+              <a class="btn btn-success btn-lg btn-block" href="{{url_for('doc_pdf')}}" role="button" target="_blank">Visualizar</a>
+            </span>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Modelo de Ata de Treinamento</h4>
+          </div>
+          <div class="card-body">
+            <img id="pdf" src="{{url_for('static',filename='img/pdf.png')}}" alt="pdf">
+            <hr>
+            <span> 
+              <a class="btn btn-success btn-lg btn-block" href="{{url_for('doc_pdf')}}" role="button" target="_blank">Visualizar</a>
+            </span>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Modelo de Ata de Treinamento</h4>
+          </div>
+          <div class="card-body">
+            <img id="pdf" src="{{url_for('static',filename='img/pdf.png')}}" alt="pdf">
+            <hr>
+            <span> 
+              <a class="btn btn-success btn-lg btn-block" href="{{url_for('doc_pdf')}}" role="button" target="_blank">Visualizar</a>
+            </span>
+          </div>
+        </div>
+      </div>
     </div>
 </div>
-
 {% endblock %}
