--- a/app/static/css/dataTable.css
+++ b/app/static/css/dataTable.css
@@ -22,6 +22,9 @@ table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
   border-bottom: 1px solid #111;
+  background-color: rgb(118, 206, 118);
+  color: rgb(48, 9, 119);
+  font: 90%/1.45em "Helvetica Neue", HelveticaNeue, Verdana, Arial, Helvetica, sans-serif;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
