--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,6 +21,41 @@ footer {
     margin-top: 55px;
 }
 
+/* Model's Size*/
 .modal-content {
     width: 130%;
 }
+/* Table Config */
+/* #ipTable{
+    color: rgb(48, 9, 119);
+    background-color: rgb(118, 206, 118);
+    font: 90%/1.45em "Helvetica Neue", HelveticaNeue, Verdana, Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+    padding: 0;
+} */
+
+
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    opacity: 1.2;
+    background-color: #fff;
+    z-index: 99;
+    text-align: center;
+  }
+  
+  #loading-image {
+    position: absolute;
+    top: 350px;
+    left: auto;
+    right: auto;
+    z-index: 100;
+  }
+
+  #pdf {
+      max-width: 150px ;
+  }
