--- a/app/templates/admin/layoutAdmin.html
+++ b/app/templates/admin/layoutAdmin.html
@@ -9,8 +9,8 @@
     {% block head %}{% endblock %}
     <link rel="icon" href="{{ url_for('static',filename='img/favicon/favicon.png')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>TI - Unimed</title>
-
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
@@ -24,6 +24,9 @@
                     <a class="nav-link" href="{{url_for('index')}}">RockeTI <span class="sr-only">(current)</span></a>
                 </li>
             </div>
+            <span>
+                <a class="btn btn-danger btn-sm rounded-pill" href="{{url_for('logout')}}" role="button"><i class="fa fa-power-off fa-2x" aria-hidden="true"></i></a>
+            </span>
         </nav>
         <div class="div-top-dashboard">
             <div class="container-fluid">
@@ -34,51 +37,27 @@
                                 <li class="nav-item">
                                     <a class="nav-link active" href="{{url_for('admin_dashboard')}}">
                                         <span data-feather="home"></span>
-                                        Dashboard <span class="sr-only">(current)</span>
+                                        <i class="fa fa-table fa-2x" aria-hidden="true"></i>
+                                        <span style="color: black; font-size:20px; ">Dashboard</span> <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{{url_for('register')}}">
                                         <span data-feather="file"></span>
-                                        Usuários
+                                        <i class="fa fa-user-circle fa-2x" aria-hidden="true"></i>
+                                        <span style="color: black; font-size:20px; ">Usuários</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">
                                         <span data-feather="shopping-cart"></span>
-                                        Equipamentos
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="nav flex-column mb-4">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <span data-feather="file-text"></span>
-                                        Current month
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <span data-feather="file-text"></span>
-                                        Last quarter
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <span data-feather="file-text"></span>
-                                        Social engagement
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <span data-feather="file-text"></span>
-                                        Year-end sale
+                                        <i class="fa fa-desktop fa-2x" aria-hidden="true"></i>
+                                        <span style="color: black; font-size:20px; ">Máquinas</span>
                                     </a>
                                 </li>
                             </ul>
                         </div>
                     </nav>
-
                     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
                         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                             {% block content %}{% endblock %}
@@ -99,6 +78,18 @@
                         {% block body %}{% endblock %}
 
                         {{ bootstrap.load_js() }}
+                        <script>
+                            $('main').append("<div id='loading'><img id='loading-image' src='{{url_for('static',filename='img/ajax-loader.gif')}}' alt='Loading...'' /></div>");
+                            $(window).on('load',function() {
+                                setTimeout(removeLoader, 250);
+                            });
+
+                            function removeLoader(){
+                                $("#loading").fadeOut(200, function() {
+                                $("#loading").remove(); 
+                            });  
+                            }
+                        </script>
                         {% block scripts %}
                         <!-- Optional JavaScript -->
 
