--- a/app/templates/admin/templates/register.html
+++ b/app/templates/admin/templates/register.html
@@ -1,7 +1,5 @@
 {% extends 'admin/layoutAdmin.html' %}
 
-
-
 {% block head %}
 
 <link rel="stylesheet" href="{{url_for('static',filename='css/dataTable.css')}}">
@@ -9,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="h2">Usuários</h1>
+<h1 style="color: rgba(105, 103, 103, 0.993) ">Usuários</h1>
 {% endblock %}
 
 
@@ -17,101 +15,244 @@
 
     <div class="container"
     <div class="col-md-8 order-md-1">
-        <form action="" method="post" >
-          <h4 class="mb-3">Cadastrar</h4>
-          <form class="needs-validation" novalidate>
-            <div class="row">
-              <div class="col-md-6 mb-3">
-                <label for="firstName">Nome</label>
-                <input type="text" class="form-control" id="firstName" name="first_name" placeholder="Nome" value="" required>
-                <div class="invalid-feedback">
-                  Valid first name is required.
-                </div>
-              </div>
-              <div class="col-md-6 mb-3">
-                <label for="lastName">Sobrenome</label>
-                <input type="text" class="form-control" id="lastName" name="last_name" placeholder="Sobrenome" value="" required>
-                <div class="invalid-feedback">
-                  Valid last name is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="mb-3">
-              <label for="username">Login</label>
-              <div class="input-group">
-                <input type="text" class="form-control" id="username" name="login" placeholder="Login" required>
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="mb-3">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="email@example.com">
-            </div>
-
-            <div class="mb-3">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" id="address" name="password" placeholder="Senha" required>
-              <div class="invalid-feedback">
-                Please enter your shipping address.
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Registrar</button>
+      <div class="container">
+            <table id="userTable" class="table" style="width:100%" style="background-color: rgb(26, 20, 80);">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Sobrenome</th>
+                    <th>Login</th>
+                    <th>Email</th>
+                    <th>Registrado</th>
+                    <th>Atualizado</th>
+                    <th>Editar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                    <form action="#">
+                      <td>Amanda</td>
+                      <td>Correia</td>
+                      <td>amanda.correia</td>
+                      <td>amandacr@gmail.com</td>
+                      <td>09/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+                <tr>
+                  <form action="#">
+                      <td>Arthur</td>
+                      <td>Dantas</td>
+                      <td>arthur.dantas</td>
+                      <td>arthur.dantas@unimedrecife.com.br</td>
+                      <td>08/06/2020</td>
+                      <td></td>
+                      <td><button class="btn btn-sl btn-outline-info btn-block" type="submit">Editar</button></td>
+                    </form>
+                </tr>
+            </table>
+            <hr>
             <!-- Large modal -->
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target=".bd-example-modal-lg">Consultar</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Cadastrar</button>
+            <br>
 
             <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                   <div class="container">
-                    <h4 class="mb-3">Consultar</h4>
-                        <table id="userTable" class="table" style="width:70%" style="background-color: rgb(26, 20, 80);">
-                        <thead>
-                            <tr>
-                                <th>Hostname</th>
-                                <th>Modelo</th>
-                                <th>Local</th>
-                                <th>Setor</th>
-                                <th>Tombamento</th>
-                                <th>Ip</th>
-                                <th>Ramal</th>
-                                <th>Editar</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>WSHGMI1234</td>
-                                <td>Notebook Dell i3</td>
-                                <td>HGMI</td>
-                                <td>2º Andar</td>
-                                <td>1234</td>
-                                <td>172.31.29.64</td>
-                                <td>3589</td>
-                                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
-                            </tr>
-                            <tr>
-                                <td>WHSHUR15518</td>
-                                <td>Notebook Dell i3</td>
-                                <td>HUR1</td>
-                                <td>5º Andar</td>
-                                <td>5518</td>
-                                <td>172.31.16.25</td>
-                                <td>4011</td>
-                                <td><button class="btn btn-lg btn-success btn-block" type="submit">Editar</button></td>
-                            </tr>
-                        </table>
-                </div>
-                </div>
+                    <hr>
+                    <h4 class="mb-3">Cadastrar</h4>
+                    <form action="" method="post" >
+                      <form class="needs-validation" novalidate>
+                        <div class="row">
+                          <div class="col-md-6 mb-3">
+                            <label for="firstName">Nome</label>
+                            <input type="text" class="form-control" id="firstName" name="first_name" placeholder="Nome" value="" required>
+                            <div class="invalid-feedback">
+                              Valid first name is required.
+                            </div>
+                          </div>
+                          <div class="col-md-6 mb-3">
+                            <label for="lastName">Sobrenome</label>
+                            <input type="text" class="form-control" id="lastName" name="last_name" placeholder="Sobrenome" value="" required>
+                            <div class="invalid-feedback">
+                              Valid last name is required.
+                            </div>
+                          </div>
+                        </div>
+            
+                        <div class="mb-3">
+                          <label for="username">Login</label>
+                          <div class="input-group">
+                            <input type="text" class="form-control" id="username" name="login" placeholder="Login" required>
+                            <div class="invalid-feedback" style="width: 100%;">
+                              Your username is required.
+                            </div>
+                          </div>
+                        </div>
+            
+                        <div class="mb-3">
+                          <label for="email">Email</label>
+                          <input type="email" class="form-control" id="email" name="email" placeholder="email@example.com">
+                        </div>
+            
+                        <div class="mb-3">
+                          <label for="password">Password</label>
+                          <input type="password" class="form-control" id="address" name="password" placeholder="Senha" required>
+                          <div class="invalid-feedback">
+                            Please enter your shipping address.
+                          </div>
+                        </div>
+                        <button type="submit" class="btn btn-success">Concluir</button>
+                        <hr>
+                          </div>
+                        </div>
+                    </form>
               </div>
-            </div>
-        </form>
-    </div>
-    <hr>
-    
-
 
 {% endblock %}
 
